# talktoon

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
clients/: config.py  db.py  openai_client.py
config/: config.yaml
orchestration/scheduler/: crontab
prisma/: schema.prisma
scripts/: run.py
talktoon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
